# zombie-survival-social-network

./: .gitignore  LICENSE  README.md  challenge-description.md
backend/: README.md  main.py  notes.md  pyproject.toml  zombie-apocalypse.db
backend/app/: alchemy_models.py  crud.py  database.py  main.py  pydantic_models.py  test_server.py
backend/docs/: requirements.txt
backend/tests/: conftest.py  test_main.py
frontend/: .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.mjs  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  main.tsx  types.ts
frontend/src/components/: distance-filter.tsx  gender-indicator.tsx  identify-self-modal.tsx  index.tsx  infections-gauge.tsx  inventory.tsx  location-editor.tsx  register.tsx  sign-in.tsx  survivor-card.tsx  toast-engine.tsx  toast.tsx  trading-panel.tsx  user-control.tsx  user-panel.tsx
frontend/src/helpers/: debounce.helper.ts  index.ts  typeguards.ts
frontend/src/hooks/: index.ts  use-create-survivor.hook.ts  use-items.hook.ts  use-report-infection.hook.ts  use-survivor.hook.ts  use-survivors.hook.ts  use-trade.hook.ts  use-update-survivor-location.hook.ts  use-update-survivor.hook.ts
frontend/src/stores/: index.ts  search-store.ts  survivor-store.ts  toasts.store.ts  use-survivor-store.ts
